--- a/index.html
+++ b/index.html
@@ -1,37 +1,350 @@
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Home - TogetherBot法人</title>
-<link rel="stylesheet" href="assets/css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TogetherBot - Discordサーバーを一つに</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: #fff;
+            overflow-x: hidden;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
+
+        header {
+            padding: 20px 0;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 1000;
+            backdrop-filter: blur(10px);
+            background: rgba(102, 126, 234, 0.1);
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        nav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .logo {
+            font-size: 28px;
+            font-weight: bold;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .logo-icon {
+            width: 40px;
+            height: 40px;
+            background: linear-gradient(135deg, #ff6b6b, #feca57);
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 24px;
+            animation: pulse 2s infinite;
+        }
+
+        @keyframes pulse {
+            0%, 100% { transform: scale(1); }
+            50% { transform: scale(1.05); }
+        }
+
+        .nav-links {
+            display: flex;
+            gap: 30px;
+            list-style: none;
+        }
+
+        .nav-links a {
+            color: #fff;
+            text-decoration: none;
+            font-weight: 500;
+            transition: opacity 0.3s;
+        }
+
+        .nav-links a:hover {
+            opacity: 0.7;
+        }
+
+        .hero {
+            padding: 150px 0 100px;
+            text-align: center;
+        }
+
+        h1 {
+            font-size: 64px;
+            margin-bottom: 20px;
+            animation: fadeInUp 1s;
+        }
+
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(30px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .subtitle {
+            font-size: 24px;
+            margin-bottom: 40px;
+            opacity: 0.9;
+            animation: fadeInUp 1s 0.2s both;
+        }
+
+        .cta-buttons {
+            display: flex;
+            gap: 20px;
+            justify-content: center;
+            animation: fadeInUp 1s 0.4s both;
+        }
+
+        .btn {
+            padding: 15px 40px;
+            font-size: 18px;
+            border-radius: 50px;
+            border: none;
+            cursor: pointer;
+            font-weight: 600;
+            transition: transform 0.3s, box-shadow 0.3s;
+            text-decoration: none;
+            display: inline-block;
+        }
+
+        .btn-primary {
+            background: #fff;
+            color: #667eea;
+        }
+
+        .btn-secondary {
+            background: rgba(255, 255, 255, 0.2);
+            color: #fff;
+            border: 2px solid #fff;
+        }
+
+        .btn:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+        }
+
+        .features {
+            padding: 80px 0;
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(10px);
+        }
+
+        .features h2 {
+            text-align: center;
+            font-size: 48px;
+            margin-bottom: 60px;
+        }
+
+        .feature-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 40px;
+        }
+
+        .feature-card {
+            background: rgba(255, 255, 255, 0.15);
+            padding: 40px;
+            border-radius: 20px;
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            transition: transform 0.3s;
+        }
+
+        .feature-card:hover {
+            transform: translateY(-10px);
+        }
+
+        .feature-icon {
+            font-size: 48px;
+            margin-bottom: 20px;
+        }
+
+        .feature-card h3 {
+            font-size: 24px;
+            margin-bottom: 15px;
+        }
+
+        .feature-card p {
+            opacity: 0.9;
+            line-height: 1.6;
+        }
+
+        .stats {
+            padding: 80px 0;
+            text-align: center;
+        }
+
+        .stats-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 40px;
+            margin-top: 40px;
+        }
+
+        .stat-item h3 {
+            font-size: 48px;
+            margin-bottom: 10px;
+            color: #feca57;
+        }
+
+        .stat-item p {
+            font-size: 18px;
+            opacity: 0.9;
+        }
+
+        footer {
+            padding: 40px 0;
+            text-align: center;
+            background: rgba(0, 0, 0, 0.2);
+            margin-top: 80px;
+        }
+
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 42px;
+            }
+
+            .subtitle {
+                font-size: 18px;
+            }
+
+            .cta-buttons {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .nav-links {
+                display: none;
+            }
+        }
+    </style>
 </head>
 <body>
-<header>
-<h1>TogetherBot法人</h1>
-<nav>
-<a href="index.html">ホーム</a> |
-<a href="pages/about.html">チームについて</a> |
-<a href="pages/news.html">ニュース</a> |
-<a href="pages/members.html">メンバー紹介</a> |
-<a href="pages/contact.html">お問い合わせ</a>
-</nav>
-</header>
-<main>
-<h2>ようこそ</h2>
-<p>本サイトは TogetherBot 法人が運営する Discord Bot 制作チームの公式サイトです。</p>
-<h2>注目のBot</h2>
-<ul>
-<li>Bot A：自動管理機能</li>
-<li>Bot B：音楽再生機能</li>
-<li>Bot C：ミニゲーム機能</li>
-</ul>
-<h2>最新ニュース</h2>
-<p>ニュースは <a href="pages/news.html">こちら</a> をご覧ください。</p>
-</main>
-<footer>
-<p>© 2025 TogetherBot法人</p>
-</footer>
+    <header>
+        <nav class="container">
+            <div class="logo">
+                <div class="logo-icon">🤝</div>
+                <span>TogetherBot</span>
+            </div>
+            <ul class="nav-links">
+                <li><a href="#features">機能</a></li>
+                <li><a href="#stats">統計</a></li>
+                <li><a href="#invite">招待</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="hero">
+        <div class="container">
+            <h1>TogetherBot</h1>
+            <p class="subtitle">Discordサーバーをもっと楽しく、もっと便利に</p>
+            <div class="cta-buttons">
+                <a href="#" class="btn btn-primary">Botを招待する</a>
+                <a href="#" class="btn btn-secondary">サポートサーバー</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="features" id="features">
+        <div class="container">
+            <h2>主な機能</h2>
+            <div class="feature-grid">
+                <div class="feature-card">
+                    <div class="feature-icon">🎮</div>
+                    <h3>楽しいゲーム</h3>
+                    <p>メンバー同士で楽しめる多彩なミニゲームでコミュニティを活性化</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">🛡️</div>
+                    <h3>モデレーション</h3>
+                    <p>自動モデレーション機能でサーバーを安全に保ち、管理を効率化</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">🎵</div>
+                    <p>高音質な音楽再生機能で、みんなで一緒に音楽を楽しもう</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">📊</div>
+                    <h3>統計機能</h3>
+                    <p>サーバーの活動状況を可視化し、成長を追跡できます</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">⚙️</div>
+                    <h3>カスタマイズ</h3>
+                    <p>サーバーに合わせて設定をカスタマイズ可能</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">💬</div>
+                    <h3>便利なコマンド</h3>
+                    <p>直感的で使いやすいコマンドで誰でも簡単に操作できます</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="stats" id="stats">
+        <div class="container">
+            <h2>TogetherBotの実績</h2>
+            <div class="stats-grid">
+                <div class="stat-item">
+                    <h3>10,000+</h3>
+                    <p>サーバー数</p>
+                </div>
+                <div class="stat-item">
+                    <h3>500,000+</h3>
+                    <p>ユーザー数</p>
+                </div>
+                <div class="stat-item">
+                    <h3>99.9%</h3>
+                    <p>稼働率</p>
+                </div>
+                <div class="stat-item">
+                    <h3>24/7</h3>
+                    <p>サポート</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="hero" id="invite">
+        <div class="container">
+            <h2 style="margin-bottom: 20px;">今すぐ始めよう</h2>
+            <p class="subtitle">TogetherBotをあなたのサーバーに招待して、<br>コミュニティをより良いものに</p>
+            <div class="cta-buttons">
+                <a href="#" class="btn btn-primary">Botを招待する</a>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2025 TogetherBot Team. All rights reserved.</p>
+            <p style="margin-top: 10px; opacity: 0.7;">お問い合わせ: support@togetherbot.com</p>
+        </div>
+    </footer>
 </body>
 </html>
