--- a/index.html
+++ b/index.html
@@ -362,6 +362,7 @@
                 <li><a href="#warning">⚠️ 重要</a></li>
                 <li><a href="#features">機能</a></li>
                 <li><a href="#commands">コマンド</a></li>
+                <li><a href="https://togetherbot.jimdosite.com/" target="_blank">公式サイト</a></li>
                 <li><a href="#invite">招待</a></li>
             </ul>
         </nav>
@@ -373,7 +374,7 @@
             <p class="subtitle">ロール認証とモデレーションの決定版Bot</p>
             <div class="cta-buttons">
                 <a href="https://discord.com/oauth2/authorize?client_id=1418365961043447889&permissions=8&integration_type=0&scope=bot" class="btn btn-primary" target="_blank">Botを招待する</a>
-                <a href="#commands" class="btn btn-secondary">コマンドを見る</a>
+                <a href="https://togetherbot.jimdosite.com/" class="btn btn-secondary" target="_blank">詳細情報</a>
             </div>
         </div>
     </section>
@@ -396,7 +397,8 @@
                 </div>
                 <p class="warning-text" style="margin-top: 30px; font-size: 18px;">
                     公式招待リンク以外からの招待は絶対にお控えください。<br>
-                    このページの「Botを招待する」ボタンのみが公式リンクです。
+                    このページの「Botを招待する」ボタンのみが公式リンクです。<br>
+                    <a href="https://togetherbot.jimdosite.com/" target="_blank" style="color: #feca57; text-decoration: underline; font-weight: bold;">詳しい情報はこちらの公式サイトをご覧ください</a>
                 </p>
             </div>
         </div>
@@ -545,6 +547,7 @@
             <p class="subtitle">TogetherBotをあなたのサーバーに招待して、<br>サーバー管理を簡単に</p>
             <div class="cta-buttons">
                 <a href="https://discord.com/oauth2/authorize?client_id=1418365961043447889&permissions=8&integration_type=0&scope=bot" class="btn btn-primary" target="_blank">Botを招待する</a>
+                <a href="https://togetherbot.jimdosite.com/" class="btn btn-secondary" target="_blank">公式サイトで詳細を見る</a>
             </div>
         </div>
     </section>
@@ -552,7 +555,9 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 TogetherBot Team. All rights reserved.</p>
-            <p style="margin-top: 10px; opacity: 0.7;">お問い合わせ: support@togetherbot.com</p>
+            <p style="margin-top: 10px; opacity: 0.7;">
+                <a href="https://togetherbot.jimdosite.com/" target="_blank" style="color: #feca57; text-decoration: none;">公式サイト: togetherbot.jimdosite.com</a>
+            </p>
         </div>
     </footer>
 </body>
